<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~ Created by Lloyd Smith on 2/24/19 7:34 PM.
  ~ Copyright (c) 2019. All rights reserved.
  ~ Last modified 2/24/19 7:29 PM.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/main_viewholder_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/coupon_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="start"
            android:padding="8dp"
            android:contentDescription="@string/coupon_image"
            android:src="@drawable/placeholder_image" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            app:layout_constraintLeft_toRightOf="@id/coupon_image">

            <TextView
                android:id="@+id/coupon_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/example_coupon_title"
                android:textColor="@color/textNormal"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_alignParentTop="true"/>

            <TextView
                android:id="@+id/coupon_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:maxLength="46"
                android:maxLines="2"
                android:text="@string/example_coupon_description"
                android:textColor="@color/textNormal"
                android:layout_below="@id/coupon_title"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/coupon_description"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_info"
                    android:layout_marginRight="4dp"/>

                <TextView
                    android:id="@+id/coupon_expiration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="start"
                    android:text="@string/example_coupon_expiration_description"
                    android:textColor="@color/textLight"
                    android:textSize="14sp" />

            </LinearLayout>

        </RelativeLayout>

        <FrameLayout
            android:id="@+id/button_clip_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:background="?android:selectableItemBackground">

            <TextView
                android:id="@+id/button_clip_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/button_clip"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

        </FrameLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/main_viewholder_content"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>